--- a/src/compilerlib/dune
+++ b/src/compilerlib/dune
@@ -14,5 +14,5 @@
    pb_parsing pb_parsing_lexer pb_parsing_parser pb_parsing_parse_tree
    pb_parsing_util pb_typing_graph pb_typing pb_typing_recursion
    pb_typing_resolution pb_typing_type_tree pb_typing_util
-   pb_typing_validation pb_util)
+   pb_typing_validation pb_util pb_format_util)
  (libraries stdlib-shims))
