--- a/src/compilerlib/dune
+++ b/src/compilerlib/dune
@@ -7,7 +7,7 @@
  (public_name ocaml-protoc.compiler-lib)
  (synopsis "Compiler library for ocaml-protoc, to turn .proto files into OCaml code")
  (wrapped true)
- (modules pb_codegen_backend pb_codegen_decode_binary pb_codegen_decode_bs
+ (modules pb_codegen_all pb_codegen_backend pb_codegen_decode_binary pb_codegen_decode_bs
    pb_codegen_decode_yojson pb_codegen_default pb_codegen_encode_binary
    pb_codegen_encode_bs pb_codegen_encode_yojson pb_codegen_formatting
    pb_codegen_ocaml_type pb_codegen_pp pb_codegen_plugin pb_codegen_types
