--- a/src/examples/dune
+++ b/src/examples/dune
@@ -41,3 +41,15 @@
  (name example05)
  (modules t_example05 example05)
  (libraries pbrt))
+
+(rule
+ (targets calculator.ml calculator.mli)
+ (deps calculator.proto)
+ (action
+  (run ocaml-protoc --binary --pp --yojson --services --ml_out ./ %{deps})))
+
+(test
+ (name calculator)
+ (modules t_calculator calculator)
+ (package pbrt_services)
+ (libraries pbrt pbrt_yojson pbrt_services))
