--- a/src/zmq-rpc/dune
+++ b/src/zmq-rpc/dune
@@ -2,7 +2,7 @@
 (library
   (name pbrt_zmq)
   (public_name pbrt_zmq)
-  (libraries pbrt pbrt_services zmq threads))
+  (libraries pbrt pbrt_services zmq threads unix))
 
 (rule
   (targets meta.ml meta.mli)
