add `odoc` as doc dep

--- a/ocaml-protoc.opam
+++ b/ocaml-protoc.opam
@@ -10,6 +10,7 @@ homepage: "https://github.com/mransan/ocaml-protoc"
 bug-reports: "https://github.com/mransan/ocaml-protoc/issues"
 depends: [
   "dune" {>= "2.0"}
+  "odoc" {with-doc}
   "ocaml" {>= "4.03"}
 ]
 build: [
