--- a/pbrt_yojson.opam
+++ b/pbrt_yojson.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/mransan/ocaml-protoc/issues"
 depends: [
   "dune" {>= "2.0"}
   "ocaml" {>= "4.03"}
+  "odoc" {with-doc}
   "yojson" {>= "1.6"}
   "base64"
 ]
