--- a/ocaml-protoc.opam
+++ b/ocaml-protoc.opam
@@ -2,8 +2,8 @@
 opam-version: "2.0"
 version: "2.4"
 synopsis: "Pure OCaml compiler for .proto files"
-maintainer: ["Maxime Ransan <maxime.ransan@gmail.com>"]
-authors: ["Maxime Ransan <maxime.ransan@gmail.com>"]
+maintainer: ["Maxime Ransan <maxime.ransan@gmail.com>" "Simon Cruanes"]
+authors: ["Maxime Ransan <maxime.ransan@gmail.com>" "Simon Cruanes"]
 license: "MIT"
 tags: ["protoc" "protobuf" "codegen"]
 homepage: "https://github.com/mransan/ocaml-protoc"
