--- a/pbrt_services.opam
+++ b/pbrt_services.opam
@@ -2,8 +2,8 @@
 opam-version: "2.0"
 version: "2.4"
 synopsis: "Runtime library for ocaml-protoc to support RPC services"
-maintainer: ["Maxime Ransan <maxime.ransan@gmail.com>"]
-authors: ["Maxime Ransan <maxime.ransan@gmail.com>"]
+maintainer: ["Maxime Ransan <maxime.ransan@gmail.com>" "Simon Cruanes"]
+authors: ["Maxime Ransan <maxime.ransan@gmail.com>" "Simon Cruanes"]
 license: "MIT"
 tags: ["protobuf" "encode" "decode" "services" "rpc"]
 homepage: "https://github.com/mransan/ocaml-protoc"
