--- a/pbrt_yojson.opam
+++ b/pbrt_yojson.opam
@@ -14,7 +14,7 @@ depends: [
   "ocaml" {>= "4.08"}
   "odoc" {with-doc}
   "yojson" {>= "1.6"}
-  "base64"
+  "base64" {>= "2.0"}
 ]
 build: [
   ["dune" "subst"] {pinned}
