--- a/pbrt.opam
+++ b/pbrt.opam
@@ -29,4 +29,4 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/mransan/ocaml-protoc.git"
-available: arch != "arm32" & arch != "x86_32"
+available: arch != "arm32" & arch != "x86_32" & arch != "ppc32" & arch != "ppc64"
