--- a/src/tests/roundtrip/dune
+++ b/src/tests/roundtrip/dune
@@ -3,15 +3,9 @@
  (public_name ocaml-protoc-tests.roundtrip-tests)
  (inline_tests)
  (flags :standard -w -66)
- (libraries base base_quickcheck pbrt pbrt_yojson qcheck qcheck-core yojson)
+ (libraries pbrt pbrt_yojson qcheck qcheck-core yojson)
  (preprocess
-  (pps
-   ppx_deriving_qcheck
-   ppx_expect
-   ppx_sexp_conv
-   ppx_sexp_value
-   ppx_compare
-   base_quickcheck.ppx_quickcheck)))
+  (pps ppx_deriving_qcheck ppx_expect ppx_deriving.show ppx_deriving.eq)))
 
 (rule
  (targets messages.ml messages.mli)
@@ -19,12 +13,10 @@
  (action
   (run
    ocaml-protoc
-   ; Currently qcheck & qcheck2 don't work with sigs, so the following doesn't work.
-   ;   --ocaml_all_types_ppx
-   ;   "deriving qcheck"
+   --ocaml_all_types_ppx
+   "deriving show { with_path = false }, eq"
    --binary
    --yojson
-   --pp
    --ml_out
    ./
    %{deps})))
