--- a/src/tests/roundtrip/dune
+++ b/src/tests/roundtrip/dune
@@ -3,7 +3,7 @@
  (public_name ocaml-protoc-tests.roundtrip-tests)
  (inline_tests)
  (flags :standard -w -66)
- (libraries pbrt pbrt_yojson qcheck qcheck-core yojson)
+ (libraries pbrt pbrt_yojson pbrt_quickcheck qcheck qcheck-core yojson)
  (preprocess
   (pps ppx_deriving_qcheck ppx_expect ppx_deriving.show ppx_deriving.eq)))
 
@@ -17,6 +17,7 @@
    "deriving show { with_path = false }, eq"
    --binary
    --yojson
+   --quickcheck
    --ml_out
    ./
    %{deps})))
