--- a/src/runtime-qcheck/dune
+++ b/src/runtime-qcheck/dune
@@ -1,7 +1,6 @@
 (library
  (public_name pbrt_quickcheck)
  (wrapped false)
- (libraries
-  pbrt
-  (re_export qcheck)
-  yojson))
+ (libraries pbrt qcheck qcheck-core yojson)
+ (preprocess
+  (pps ppx_deriving.show)))
