--- a/benchs/dune
+++ b/benchs/dune
@@ -1,7 +1,10 @@
 (executable
  (name benchs)
  (ocamlopt_flags :standard -inline 100)
- (foreign_stubs (language c) (flags :standard -std=c99 -O2) (names stubs))
+ (foreign_stubs
+  (language c)
+  (flags :standard -std=c99 -O2)
+  (names stubs))
  (libraries ocaml-protoc benchmark))
 
 (rule
