--- a/src/runtime-yojson/dune
+++ b/src/runtime-yojson/dune
@@ -1,5 +1,6 @@
-
 (library
-  (public_name pbrt_yojson)
-  (wrapped false)
-  (libraries (re_export yojson) base64))
+ (public_name pbrt_yojson)
+ (wrapped false)
+ (libraries
+  (re_export yojson)
+  base64))
