--- a/dune
+++ b/dune
@@ -1,4 +1,4 @@
-(env
- (_
-  (flags -bin-annot -annot -strict-sequence -keep-locs -no-alias-deps -w
-    A-4-42-41-48-70)))
+                      
+                      
+                      
+                      (env (_ (flags -bin-annot -annot -strict-sequence -keep-locs -no-alias-deps -w A-4-42-41-48-70)))
