--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,14 @@ jobs:
     - run: opam exec -- dune build @install
     - run: opam exec -- dune runtest
 
-    # integration tests
-    - run: opam install ppx_deriving -y
-    - run: sudo apt install protobuf-compiler libprotobuf-dev
-    - run: opam exec -- make integration PB_LINC=/usr/lib/x86_64-linux-gnu/ PB_HINC=/usr/include/x86_64-linux-gnu/
+  integration:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+    - run: docker build -f dep/Dockerfile . --target=base
+    - run: docker build -f dep/Dockerfile . --target=run-the-damn-build
 
   format:
     name: format
